링크 공유 썸네일 추가2

--- a/src/app.html
+++ b/src/app.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta property="og:title" content="EDDU Pop Meditation - 싱잉볼 클래스 신청" />
 		<meta property="og:description" content="싱잉볼 1:1 클래스 신청, 일정 선택 및 간편 예약!" />
-		<meta property="og:image" content="%sveltekit.assets%/1.png" />
+		<meta property="og:image" content="/1.png" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="EDDU Pop Meditation - 싱잉볼 클래스 신청" />
 		<meta name="twitter:description" content="싱잉볼 1:1 클래스 신청, 일정 선택 및 간편 예약!" />
-		<meta name="twitter:image" content="%sveltekit.assets%/1.png" />
+		<meta name="twitter:image" content="/1.png" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
