링크 공유 썸네일 추가3

--- a/src/app.html
+++ b/src/app.html
@@ -4,13 +4,20 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- Open Graph -->
 		<meta property="og:title" content="EDDU Pop Meditation - 싱잉볼 클래스 신청" />
 		<meta property="og:description" content="싱잉볼 1:1 클래스 신청, 일정 선택 및 간편 예약!" />
-		<meta property="og:image" href="%sveltekit.assets%/1.png" />
+		<meta property="og:image" content="https://eddupopmeditation.vercel.app/1.png" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://eddupopmeditation.vercel.app" />
+
+		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="EDDU Pop Meditation - 싱잉볼 클래스 신청" />
 		<meta name="twitter:description" content="싱잉볼 1:1 클래스 신청, 일정 선택 및 간편 예약!" />
-		<meta name="twitter:image" href="%sveltekit.assets%/1.png" />
+		<meta name="twitter:image" content="https://eddupopmeditation.vercel.app/1.png" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
