--- a/src/app.html
+++ b/src/app.html
@@ -8,11 +8,15 @@
 		<!-- Open Graph -->
 		<meta property="og:title" content="EDDU Pop Meditation - 싱잉볼 클래스 신청" />
 		<meta property="og:description" content="싱잉볼 1:1 클래스 신청, 일정 선택 및 간편 예약!" />
+		<meta property="og:image" content="%sveltekit.assets%/thumbnail.png" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://eddupopmeditation.vercel.app" />
 
 		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="EDDU Pop Meditation - 싱잉볼 클래스 신청" />
 		<meta name="twitter:description" content="싱잉볼 1:1 클래스 신청, 일정 선택 및 간편 예약!" />
+		<meta name="twitter:image" content="%sveltekit.assets%/thumbnail.png" />
 
 		%sveltekit.head%
 	</head>
